Убирает ненужные дивы. Делает шапку и подвал структурно похожими
Убрал дивы в подвале, которые оказались ненужными.
Поменял структуру шапки и подвала, чтобы схожие структурные элементы были и размечены аналогично.

--- a/catalog.html
+++ b/catalog.html
@@ -11,12 +11,11 @@
       <a class="site-header-logo" href="index.html">
         <img src="img/device.svg" width="163" height="35" alt="Логотип интернет-магазина «Девайс»">
       </a>
-
-      <div class="site-menu">
-        <form class="search-form" action="https://echo.htmlacademy.ru" method="get">
-          <label class="visually-hidden" for="search-field">Поиск по сайту</label>
-          <input class="search" id="search-field" type="search" name="q" value="" placeholder="Поиск по сайту">
-        </form>
+      <form class="search-form" action="https://echo.htmlacademy.ru" method="get">
+        <label class="visually-hidden" for="search-field">Поиск по сайту</label>
+        <input class="search" id="search-field" type="search" name="q" value="" placeholder="Поиск по сайту">
+      </form>
+      <div class="site-menu site-header-site-menu">
         <ul class="user-menu">
           <li class="profile-name"><a href="#">Валентин Петухов</a></li>
           <li class="logout-link"><a href="#">Выйти</a></li>
@@ -24,16 +23,14 @@
         <a class="compare" href="#">Сравнить</a>
         <a class="cart" href="#">Корзина</a>
       </div>
-
       <nav class="main-navigation">
-        <ul class="site-navigation">
+        <ul class="site-navigation site-header-site-navigation">
           <li class="catalog"><a href="#">Каталог товаров</a></li>
           <li class="delivery"><a href="#">Доставка</a></li>
           <li class="warranty"><a href="#">Гарантия</a></li>
           <li class="contacts"><a href="#">Контакты</a></li>
         </ul>
       </nav>
-
       <div class="popup-categories">
         <ul>
           <li><a href="#">Виртуальная реальность</a></li>
@@ -152,10 +149,10 @@
       </section>
     </main>
     <footer class="site-footer">
-      <div class="footer-top">
-        <a class="site-footer-logo" href="index.html">
-          <img src="img/device.svg" width="163" height="35" alt="Логотип интернет-магазина «Девайс»">
-        </a>
+      <a class="site-footer-logo" href="index.html">
+        <img src="img/device.svg" width="163" height="35" alt="Логотип интернет-магазина «Девайс»">
+      </a>
+      <div class="site-menu site-footer-site-menu">
         <ul class="user-menu">
           <li class="profile-name"><a href="#">Валентин Петухов</a></li>
           <li class="logout-link"><a href="#">Выйти</a></li>
@@ -163,25 +160,21 @@
         <a class="compare" href="#">Сравнить</a>
         <a class="cart" href="#">Корзина</a>
       </div>
-      <div class="footer-middle">
-        <p class="footer-contacts">
-          <span class="address">г. Москва, ул. Строителей, 15</span>
-          <span class="phone-number">Тел.: +7 (495) 495-95-95</span>
-        </p>
-        <ul class="site-navigation">
-          <li class="delivery"><a href="#">Доставка</a></li>
-          <li class="warranty"><a href="#">Гарантия</a></li>
-          <li class="contacts"><a href="#">Контакты</a></li>
-        </ul>
-      </div>
-      <div class="footer-bottom">
-        <ul class="social-media-list">
-          <li><a class="social-button" href="#">Фейсбук</a></li>
-          <li><a class="social-button" href="#">Инстаграм</a></li>
-          <li><a class="social-button" href="#">Твиттер</a></li>
-        </ul>
-        <a class="signature" href="https://htmlacademy.ru/intensive/htmlcss">Учебный проект HTML Academy</a>
-      </div>
+      <p class="footer-contacts">
+        <span class="address">г. Москва, ул. Строителей, 15</span>
+        <span class="phone-number">Тел.: +7 (495) 495-95-95</span>
+      </p>
+      <ul class="site-navigation site-footer-site-navigation">
+        <li class="delivery"><a href="#">Доставка</a></li>
+        <li class="warranty"><a href="#">Гарантия</a></li>
+        <li class="contacts"><a href="#">Контакты</a></li>
+      </ul>
+      <ul class="social-media-list">
+        <li><a class="social-button" href="#">Фейсбук</a></li>
+        <li><a class="social-button" href="#">Инстаграм</a></li>
+        <li><a class="social-button" href="#">Твиттер</a></li>
+      </ul>
+      <a class="signature" href="https://htmlacademy.ru/intensive/htmlcss">Учебный проект HTML Academy</a>
     </footer>
   </body>
 </html>
