--- a/catalog.html
+++ b/catalog.html
@@ -7,21 +7,23 @@
     <link href="css/style.css" rel="stylesheet">
   </head>
   <body class="inner-page">
-    <header class="site-header">
+    <header class="site-header layout-positioner">
       <a class="site-header-logo" href="index.html">
         <img src="img/device.svg" width="163" height="35" alt="Логотип интернет-магазина «Девайс»">
       </a>
-      <form class="search-form" action="https://echo.htmlacademy.ru" method="get">
-        <label class="visually-hidden" for="search-field">Поиск по сайту</label>
-        <input class="search" id="search-field" type="search" name="q" value="" placeholder="Поиск по сайту">
-      </form>
-      <div class="site-menu site-header-site-menu">
-        <ul class="user-menu">
-          <li class="profile-name"><a href="#">Валентин Петухов</a></li>
-          <li class="logout-link"><a href="#">Выйти</a></li>
-        </ul>
-        <a class="compare" href="#">Сравнить</a>
-        <a class="cart" href="#">Корзина</a>
+      <div class="layout-header-top-row">
+        <form class="search-form" action="https://echo.htmlacademy.ru" method="get">
+          <label class="visually-hidden" for="search-field">Поиск по сайту</label>
+          <input class="search" id="search-field" type="search" name="q" value="" placeholder="Поиск по сайту">
+        </form>
+        <div class="site-menu site-header-site-menu">
+          <ul class="user-menu">
+            <li class="profile-name"><a href="#">Валентин Петухов</a></li>
+            <li class="logout-link"><a href="#">Выйти</a></li>
+          </ul>
+          <a class="compare" href="#">Сравнить</a>
+          <a class="cart" href="#">Корзина</a>
+        </div>
       </div>
       <nav class="main-navigation">
         <ul class="site-navigation site-header-site-navigation">
