Добавляет макросетку основному содержанию главной страницы

--- a/catalog.html
+++ b/catalog.html
@@ -44,7 +44,7 @@
         </ul>
       </div>
     </header>
-    <main class="container">
+    <main class="layout-positioner">
       <h1>Моноподы для селфи</h1>
 
       <ol class="breadcrumbs">
