--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
       </div>
       <nav class="main-navigation">
         <ul class="site-navigation site-header-site-navigation">
-          <li class="catalog"><a href="#">Каталог товаров</a></li>
-          <li class="delivery"><a href="#">Доставка</a></li>
-          <li class="warranty"><a href="#">Гарантия</a></li>
-          <li class="contacts"><a href="#">Контакты</a></li>
+          <li class="catalog-link"><a href="#">Каталог товаров</a></li>
+          <li class="delivery-link"><a href="#">Доставка</a></li>
+          <li class="warranty-link"><a href="#">Гарантия</a></li>
+          <li class="contacts-link"><a href="#">Контакты</a></li>
         </ul>
       </nav>
       <div class="popup-categories">
@@ -79,9 +79,9 @@
         </div>
         <div class="layout-footer-middle-column">
           <ul class="site-navigation site-footer-site-navigation">
-            <li class="delivery"><a href="#">Доставка</a></li>
-            <li class="warranty"><a href="#">Гарантия</a></li>
-            <li class="contacts"><a href="#">Контакты</a></li>
+            <li class="delivery-link"><a href="#">Доставка</a></li>
+            <li class="warranty-link"><a href="#">Гарантия</a></li>
+            <li class="contacts-link"><a href="#">Контакты</a></li>
           </ul>
           <ul class="social-media-list">
             <li><a class="social-button" href="#">Фейсбук</a></li>
