--- a/index.html
+++ b/index.html
@@ -8,39 +8,41 @@
   </head>
   <body>
     <header class="site-header layout-positioner">
-      <a class="site-header-logo">
-        <img src="img/device.svg" width="163" height="35" alt="Логотип интернет-магазина «Девайс»">
-      </a>
-      <div class="layout-header-top-row">
-        <form class="search-form" action="https://echo.htmlacademy.ru" method="get">
-          <label class="visually-hidden" for="search-field">Поиск по сайту</label>
-          <input class="search" id="search-field" type="search" name="q" value="" placeholder="Поиск по сайту">
-        </form>
-        <div class="site-menu site-header-site-menu">
-          <ul class="user-menu">
-            <li class="login-link"><a href="#">Войти</a></li>
-          </ul>
-          <a class="compare" href="#">Сравнить</a>
-          <a class="cart" href="#">Корзина</a>
+      <div class="layout-header">
+        <a class="site-header-logo">
+          <img src="img/device.svg" width="163" height="35" alt="Логотип интернет-магазина «Девайс»">
+        </a>
+        <div class="layout-header-top-row">
+          <form class="search-form" action="https://echo.htmlacademy.ru" method="get">
+            <label class="visually-hidden" for="search-field">Поиск по сайту</label>
+            <input class="search" id="search-field" type="search" name="q" value="" placeholder="Поиск по сайту">
+          </form>
+          <div class="site-menu site-header-site-menu">
+            <ul class="user-menu">
+              <li class="login-link"><a href="#">Войти</a></li>
+            </ul>
+            <a class="compare" href="#">Сравнить</a>
+            <a class="cart" href="#">Корзина</a>
+          </div>
         </div>
-      </div>
-      <nav class="main-navigation">
-        <ul class="site-navigation site-header-site-navigation">
-          <li class="catalog-link"><a href="#">Каталог товаров</a></li>
-          <li class="delivery-link"><a href="#">Доставка</a></li>
-          <li class="warranty-link"><a href="#">Гарантия</a></li>
-          <li class="contacts-link"><a href="#">Контакты</a></li>
-        </ul>
-      </nav>
-      <div class="popup-categories">
-        <ul>
-          <li><a href="#">Виртуальная реальность</a></li>
-          <li><a href="#">Моноподы для селфи</a></li>
-          <li><a href="#">Экшн-камеры</a></li>
-          <li><a href="#">Фитнес-браслеты</a></li>
-          <li><a href="#">Умные часы</a></li>
-          <li><a href="#">Квадрокоптеры</a></li>
-        </ul>
+        <nav class="main-navigation">
+          <ul class="site-navigation site-header-site-navigation">
+            <li class="catalog-link"><a href="#">Каталог товаров</a></li>
+            <li class="delivery-link"><a href="#">Доставка</a></li>
+            <li class="warranty-link"><a href="#">Гарантия</a></li>
+            <li class="contacts-link"><a href="#">Контакты</a></li>
+          </ul>
+        </nav>
+        <div class="popup-categories">
+          <ul>
+            <li><a href="#">Виртуальная реальность</a></li>
+            <li><a href="#">Моноподы для селфи</a></li>
+            <li><a href="#">Экшн-камеры</a></li>
+            <li><a href="#">Фитнес-браслеты</a></li>
+            <li><a href="#">Умные часы</a></li>
+            <li><a href="#">Квадрокоптеры</a></li>
+          </ul>
+        </div>
       </div>
     </header>
     <main class="layout-positioner">
