Добавляет "колоночную" разметку футера на внуттреннюю страницу

--- a/catalog.html
+++ b/catalog.html
@@ -153,32 +153,38 @@
       </section>
     </main>
     <footer class="site-footer">
-      <a class="site-footer-logo" href="index.html">
-        <img src="img/device.svg" width="163" height="35" alt="Логотип интернет-магазина «Девайс»">
-      </a>
-      <div class="site-menu site-footer-site-menu">
-        <ul class="user-menu">
-          <li class="profile-name"><a href="#">Валентин Петухов</a></li>
-          <li class="logout-link"><a href="#">Выйти</a></li>
-        </ul>
-        <a class="compare" href="#">Сравнить</a>
-        <a class="cart" href="#">Корзина</a>
+      <div class="layout-positioner layout-footer-columns">
+        <div class="layout-footer-left-column">
+          <a class="site-footer-logo">
+            <img src="img/device.svg" width="163" height="35" alt="Логотип интернет-магазина «Девайс»">
+          </a>
+          <p class="address">г. Москва, ул. Строителей, 15</p>
+        </div>
+        <div class="layout-footer-middle-column">
+          <ul class="site-navigation site-footer-site-navigation">
+            <li class="delivery-link"><a href="#">Доставка</a></li>
+            <li class="warranty-link"><a href="#">Гарантия</a></li>
+            <li class="contacts-link"><a href="#">Контакты</a></li>
+          </ul>
+          <ul class="social-media-list">
+            <li><a class="social-button" href="#">Фейсбук</a></li>
+            <li><a class="social-button" href="#">Инстаграм</a></li>
+            <li><a class="social-button" href="#">Твиттер</a></li>
+          </ul>
+        </div>
+        <div class="layout-footer-right-column">
+          <div class="site-menu site-footer-site-menu">
+            <ul class="user-menu">
+              <li class="profile-name"><a href="#">Валентин Петухов</a></li>
+              <li class="logout-link"><a href="#">Выйти</a></li>
+            </ul>
+            <a class="compare" href="#">Сравнить</a>
+            <a class="cart" href="#">Корзина</a>
+          </div>
+          <p class="phone-number">Тел.: +7 (495) 495-95-95</p>
+          <a class="signature" href="https://htmlacademy.ru/intensive/htmlcss">Учебный проект HTML Academy</a>
+        </div>
       </div>
-      <p class="footer-contacts">
-        <span class="address">г. Москва, ул. Строителей, 15</span>
-        <span class="phone-number">Тел.: +7 (495) 495-95-95</span>
-      </p>
-      <ul class="site-navigation site-footer-site-navigation">
-        <li class="delivery"><a href="#">Доставка</a></li>
-        <li class="warranty"><a href="#">Гарантия</a></li>
-        <li class="contacts"><a href="#">Контакты</a></li>
-      </ul>
-      <ul class="social-media-list">
-        <li><a class="social-button" href="#">Фейсбук</a></li>
-        <li><a class="social-button" href="#">Инстаграм</a></li>
-        <li><a class="social-button" href="#">Твиттер</a></li>
-      </ul>
-      <a class="signature" href="https://htmlacademy.ru/intensive/htmlcss">Учебный проект HTML Academy</a>
     </footer>
   </body>
 </html>
