Добавляет потока в шапку и подвал

--- a/catalog.html
+++ b/catalog.html
@@ -28,10 +28,10 @@
         </div>
         <nav class="main-navigation">
           <ul class="site-navigation site-header-site-navigation">
-            <li class="catalog"><a href="#">Каталог товаров</a></li>
-            <li class="delivery"><a href="#">Доставка</a></li>
-            <li class="warranty"><a href="#">Гарантия</a></li>
-            <li class="contacts"><a href="#">Контакты</a></li>
+            <li class="catalog-link"><a href="#">Каталог товаров</a></li>
+            <li class="delivery-link"><a href="#">Доставка</a></li>
+            <li class="warranty-link"><a href="#">Гарантия</a></li>
+            <li class="contacts-link"><a href="#">Контакты</a></li>
           </ul>
         </nav>
         <div class="popup-categories">
@@ -171,9 +171,9 @@
             <li class="contacts-link"><a href="#">Контакты</a></li>
           </ul>
           <ul class="social-media-list">
-            <li><a class="social-button" href="#">Фейсбук</a></li>
-            <li><a class="social-button" href="#">Инстаграм</a></li>
-            <li><a class="social-button" href="#">Твиттер</a></li>
+            <li class="social-button"><a href="#">Фейсбук</a></li>
+            <li class="social-button"><a href="#">Инстаграм</a></li>
+            <li class="social-button"><a href="#">Твиттер</a></li>
           </ul>
         </div>
         <div class="layout-footer-right-column">
