--- a/index.html
+++ b/index.html
@@ -86,9 +86,9 @@
             <li class="contacts-link"><a href="#">Контакты</a></li>
           </ul>
           <ul class="social-media-list">
-            <li><a class="social-button" href="#">Фейсбук</a></li>
-            <li><a class="social-button" href="#">Инстаграм</a></li>
-            <li><a class="social-button" href="#">Твиттер</a></li>
+            <li class="social-button"><a href="#">Фейсбук</a></li>
+            <li class="social-button"><a href="#">Инстаграм</a></li>
+            <li class="social-button"><a href="#">Твиттер</a></li>
           </ul>
         </div>
         <div class="layout-footer-right-column">
