Меняет структуру сетки футера с колоночной на строчную

--- a/catalog.html
+++ b/catalog.html
@@ -157,26 +157,11 @@
       </div>
     </main>
     <footer class="site-footer">
-      <div class="layout-positioner layout-footer-columns">
-        <div class="layout-footer-left-column">
+      <div class="layout-positioner layout-footer-positioner">
+        <div class="layout-footer-top-row">
           <a class="site-footer-logo">
             <img src="img/device.svg" width="163" height="35" alt="Логотип интернет-магазина «Девайс»">
           </a>
-          <p class="address">г. Москва, ул. Строителей, 15</p>
-        </div>
-        <div class="layout-footer-middle-column">
-          <ul class="site-navigation site-footer-site-navigation">
-            <li class="delivery-link"><a href="#">Доставка</a></li>
-            <li class="warranty-link"><a href="#">Гарантия</a></li>
-            <li class="contacts-link"><a href="#">Контакты</a></li>
-          </ul>
-          <ul class="social-media-list">
-            <li class="social-button"><a href="#">Фейсбук</a></li>
-            <li class="social-button"><a href="#">Инстаграм</a></li>
-            <li class="social-button"><a href="#">Твиттер</a></li>
-          </ul>
-        </div>
-        <div class="layout-footer-right-column">
           <div class="site-menu site-footer-site-menu">
             <ul class="user-menu">
               <li class="profile-name"><a href="#">Валентин Петухов</a></li>
@@ -185,7 +170,24 @@
             <a class="compare" href="#">Сравнить</a>
             <a class="cart" href="#">Корзина</a>
           </div>
-          <p class="phone-number">Тел.: +7 (495) 495-95-95</p>
+        </div>
+
+        <div class="layout-footer-middle-row">
+          <p class="footer-contacts address">г. Москва, ул. Строителей, 15</p>
+          <p class="footer-contacts phone-number">Тел.: +7 (495) 495-95-95</p>
+          <ul class="site-navigation site-footer-site-navigation">
+            <li class="delivery-link"><a href="#">Доставка</a></li>
+            <li class="warranty-link"><a href="#">Гарантия</a></li>
+            <li class="contacts-link"><a href="#">Контакты</a></li>
+          </ul>
+        </div>
+
+        <div class="layout-footer-bottom-row">
+          <ul class="social-media-list">
+            <li class="social-button"><a href="#">Фейсбук</a></li>
+            <li class="social-button"><a href="#">Инстаграм</a></li>
+            <li class="social-button"><a href="#">Твиттер</a></li>
+          </ul>
           <a class="signature" href="https://htmlacademy.ru/intensive/htmlcss">Учебный проект HTML Academy</a>
         </div>
       </div>
