--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
         <div class="layout-header-top-row">
           <form class="search-form" action="https://echo.htmlacademy.ru" method="get">
             <label class="visually-hidden" for="search-field">Поиск по сайту</label>
-            <input class="search" id="search-field" type="search" name="q" value="" placeholder="Поиск по сайту">
+            <input class="search-field" id="search-field" type="search" name="q" value="" placeholder="Поиск по сайту">
+            <button class="search-form-button" type="submit">Найти</button>
           </form>
           <div class="site-menu site-header-site-menu">
             <ul class="user-menu">
