Добавляет выпадающее меню в шапку

--- a/catalog.html
+++ b/catalog.html
@@ -29,22 +29,22 @@
         </div>
         <nav class="main-navigation">
           <ul class="site-navigation site-header-site-navigation">
-            <li class="catalog-link"><a href="#">Каталог товаров</a></li>
+            <li class="catalog-link">
+              <a href="#">Каталог товаров</a>
+              <ul class="catalog-subcategories">
+                <li><a href="#">Виртуальная реальность</a></li>
+                <li><a href="#">Фитнес-браслеты</a></li>
+                <li><a href="#">Квадрокоптеры</a></li>
+                <li><a href="#">Моноподы для селфи</a></li>
+                <li><a href="#">Умные часы</a></li>
+                <li><a href="#">Экшн-камеры</a></li>
+              </ul>
+            </li>
             <li class="delivery-link"><a href="#">Доставка</a></li>
             <li class="warranty-link"><a href="#">Гарантия</a></li>
             <li class="contacts-link"><a href="#">Контакты</a></li>
           </ul>
         </nav>
-        <div class="popup-categories">
-          <ul>
-            <li><a href="#">Виртуальная реальность</a></li>
-            <li><a href="#">Моноподы для селфи</a></li>
-            <li><a href="#">Экшн-камеры</a></li>
-            <li><a href="#">Фитнес-браслеты</a></li>
-            <li><a href="#">Умные часы</a></li>
-            <li><a href="#">Квадрокоптеры</a></li>
-          </ul>
-        </div>
       </div>
     </header>
     <main class="layout-positioner">
